# tuitty-core

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: alternate_screen.rs  async_input.rs  demo.rs  dispatcher.rs  grapheme_ex.rs  grapheme_support.rs  integration.rs  integration.rs.bak  lr_scroll_perf.rs  newline.rs  old.rs  polling.rs  print_gap.rs  set_scroll_perf.rs  switch_screen.rs  test_app.rs  unix_input.rs  winbuffer_attrs.rs  winbuffer_write.rs  windows_write.rs
src/: ansi.rs  ffi.rs  lib.rs  linux.rs  main.rs  shared.rs  wincon.rs  windows.rs
src/actions/: mod.rs
src/actions/ansi/: mouse.rs  output.rs  screen.rs
src/actions/wincon/: output.rs
src/common/: cache.rs  enums.rs  meta.rs  metadata.rs  mod.rs  runtime.rs  traits.rs  wcwidth.rs
src/common/tests/: mod.rs
src/common/unicode/: grapheme.rs  mod.rs  sentence.rs  tables.rs  wcwidth.rs  word.rs
src/cursor/: ansi.rs  linux.rs  mod.rs  wincon.rs  windows.rs
src/cursor/linux/: mod.rs
src/cursor/windows/: mod.rs
src/input/: mod.rs
src/input/ansi/: mod.rs
src/input/linux/: mod.rs  parser.rs
src/input/wincon/: mod.rs  parser.rs
src/input/windows/: mod.rs  parser.rs
src/interface/: alert.rs  mod.rs
src/output/: mod.rs
src/output/ansi/: mod.rs  raw.rs  style.rs
src/output/linux/: mod.rs  raw.rs  style.rs
src/output/wincon/: mod.rs  (+2 more)
src/parser/: mod.rs  unix.rs
src/screen/: mod.rs
src/shared/: ansi.rs  mod.rs  windows.rs
src/terminal/: mod.rs  posix.rs  win32.rs
src/tty/: ansi.rs  mod.rs  unix.rs  wincon.rs  windows.rs
src/tui/: mod.rs
tests/: example.rs
(+125 files in other folders)
